# agent-headlock

./: .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
examples/: async_agent.py  example_agent.py
src/: __init__.py  client.py  mcp_tools.py  models.py  server.py  session_manager.py  terminal.py
