[project]
name = "agent-headlock"
version = "1.0.0"
description = "MCP server for AI agent headlock mode - enables user control over AI execution flow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
headlock-server = "src.server:main"
headlock-terminal = "src.terminal:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
